@@ -15,6 +15,8 @@ to build HTML documentation when installing gems.)
   * Fixed HEREDOC output for the limited case of a heredoc followed by a line
     end.  When a HEREDOC is not followed by a line end RDoc is not currently
     smart enough to restore the source correctly.  Bug #162 by Zachary Scott.
+  * Fixed parsing of executables with shebang and encoding comments.  Bug #161
+    by Marcus Stollsteimer
 
 === 4.0.0.preview2.1 / 2012-12-14
 
